fix img avatar too big

--- a/index.css
+++ b/index.css
@@ -8,7 +8,7 @@ footer{
     margin-right: 10px;
 }
 #avatar_big{
-    width:25em; 
+    width:24em; 
     border-radius: 50%;
     margin-bottom: 5em;
 }
